Fix: Fix narrow tables don't have horizontal scroll

--- a/components/block/table/narrow/narrow.module.css
+++ b/components/block/table/narrow/narrow.module.css
@@ -2,6 +2,10 @@
 	min-width: calc(140px + 160px + 200px);
 }
 
+.container {
+	overflow: auto;
+}
+
 .height {
 	text-align: left;
 	width: 140px;
